tests/codegen/pass/026-arrays.hyg
let n = 8;
let arr: array {int} = array(n, 40 + 2);
let mutable i = 0;
println(arrayLength(arr));
while (i < arrayLength(arr)) do {
    arrayElem(arr, i) <- arrayElem(arr, i) + i;
    i <- i + 1
};

i <- 0;
while (i < arrayLength(arr)) do {
    assert(arrayElem(arr, i) = 42 + i);
    i <- i + 1
};
assert(arrayLength(arr) = 8)
