tests/codegen/fail/020-array-redefine.hyg
let n = 6;
let arr: array {int} = array(n, 40 + 2);
let arr: array {int} = array(3, 8);
assert(arrayLength(arr) = 6)
